--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,7 @@
 @import "./styles/header.scss";
 @import "./styles/footer.scss";
 @import "./styles/res_header.scss";
+@import "./styles/res_footer.scss";
 @import "./res_style.scss";
 
 html {
