--- a/login/styles/mypage.css
+++ b/login/styles/mypage.css
@@ -244,6 +244,7 @@ header .header_inner .header_inner_logo {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  cursor: pointer;
 }
 
 * {
@@ -264,7 +265,6 @@ a {
 
 footer {
   width: 100%;
-  height: 190px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -273,7 +273,9 @@ footer {
   position: relative;
 }
 footer .footer_inner {
-  width: 1050px;
+  width: 100%;
+  max-width: 1050px;
+  margin: 50px auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -310,8 +312,8 @@ footer .footer_inner .footer_inner_left {
   gap: 10px;
 }
 footer .footer_inner .footer_inner_left img {
-  width: 140px;
-  height: 66px;
+  width: 160px;
+  height: 70px;
 }
 footer .footer_inner .footer_inner_left p {
   font-family: pretendard;
@@ -324,20 +326,20 @@ footer .footer_inner .footer_inner_center {
 footer .footer_inner .footer_inner_center ul {
   display: flex;
   flex-direction: column;
-  gap: 9px;
+  gap: 10px;
 }
 footer .footer_inner .footer_inner_center ul li {
   font-family: pretendard;
   font-size: 1.4rem;
 }
 footer .footer_inner .footer_inner_center ul li:last-child {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-weight: bold;
 }
 footer .footer_inner .footer_inner_right {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 10px;
   font-family: pretendard;
 }
 footer .footer_inner .footer_inner_right .inner_right_top {
@@ -349,7 +351,7 @@ footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(1) {
   font-weight: bold;
 }
 footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(2) {
-  font-size: 2.6rem;
+  font-size: 2.4rem;
   font-weight: bold;
 }
 footer .footer_inner .footer_inner_right .inner_right_bottom {
@@ -359,6 +361,7 @@ footer .footer_inner .footer_inner_right .inner_right_bottom {
 footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left {
   display: flex;
   flex-direction: column;
+  text-align: center;
   gap: 5px;
 }
 footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(1) {
@@ -370,7 +373,7 @@ footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left 
 }
 footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_right {
   font-size: 1.4rem;
-  line-height: 150%;
+  line-height: 140%;
 }
 
 html {
