--- a/login/styles/res_login.css
+++ b/login/styles/res_login.css
@@ -1,12 +1,89 @@
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 1024px) {
   body {
-    width: 100%;
-    height: 100vh;
+    height: 100%;
     gap: 50px;
   }
   #container .login_inner {
-    width: 500px;
+    margin: 0 auto;
+    padding: 0 30px;
+  }
+  #container .login_inner .login_01 {
+    gap: 25px;
+  }
+  #container .login_inner .login_01 h2 {
+    font-size: 2.8rem;
+  }
+  #container .login_inner .login_01 .login_input {
+    gap: 15px;
+  }
+  #container .login_inner .login_01 .login_input .login_pw .fa-eye-slash {
+    right: 15px;
+    font-size: 1.4rem;
+  }
+  #container .login_inner .login_01 .login_input input {
+    height: 50px;
+    padding: 8px 16px;
+    font-size: 1.4rem;
+  }
+  #container .login_inner .login_01 button {
+    height: 50px;
+    font-size: 1.6rem;
+  }
+  #container .login_inner .login_01 ul {
+    gap: 8px;
+  }
+  #container .login_inner .login_01 ul li {
+    font-size: 1.3rem;
+    line-height: 1.3rem;
+  }
+  #container .login_inner .login_01 ul p {
+    font-size: 1rem;
+  }
+  #container .login_inner .login_02 .login_social_title hr {
+    border: 0.5px solid #ff9900;
+  }
+  #container .login_inner .login_02 .login_social_title p {
+    padding: 5px;
+    font-size: 1.2rem;
+  }
+  #container .login_inner .login_02 .login_social_kakao {
+    height: 50px;
+    gap: 5px;
+  }
+  #container .login_inner .login_02 .login_social_kakao img {
+    width: 16px;
+    height: 16px;
+  }
+  #container .login_inner .login_02 .login_social_kakao p {
+    font-size: 1.6rem;
+  }
+  #container .login_inner .login_02 .login_social_naver {
+    height: 50px;
+    gap: 5px;
+  }
+  #container .login_inner .login_02 .login_social_naver img {
+    width: 16px;
+    height: 16px;
+  }
+  #container .login_inner .login_02 .login_social_naver p {
+    font-size: 1.6rem;
+  }
+}
+@media screen and (max-width: 500px) {
+  body {
+    height: 100%;
+    gap: 50px;
+  }
+  #container {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  #container .login_inner {
     gap: 20px;
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 0 50px;
   }
   #container .login_inner .login_01 {
     gap: 20px;
@@ -21,14 +98,12 @@
     right: 10px;
     font-size: 1.2rem;
   }
-  #container .login_inner .login_01 .login_input input {
-    width: 300px;
+  #container .login_inner .login_01 input {
     height: 40px;
     padding: 5px 10px;
     font-size: 1.2rem;
   }
-  #container .login_inner .login_01 button {
-    width: 300px;
+  #container .login_inner .login_01 .button {
     height: 40px;
     font-size: 1.4rem;
   }
@@ -42,9 +117,6 @@
   #container .login_inner .login_01 ul p {
     font-size: 1rem;
   }
-  #container .login_inner .login_02 .login_social_title {
-    width: 300px;
-  }
   #container .login_inner .login_02 .login_social_title hr {
     border: 0.5px solid #ff9900;
   }
@@ -53,7 +125,6 @@
     font-size: 1.2rem;
   }
   #container .login_inner .login_02 .login_social_kakao {
-    width: 300px;
     height: 40px;
     font-size: 1.4rem;
     gap: 5px;
@@ -66,7 +137,6 @@
     font-size: 1.4rem;
   }
   #container .login_inner .login_02 .login_social_naver {
-    width: 300px;
     height: 40px;
     font-size: 1.4rem;
     gap: 5px;
@@ -77,5 +147,9 @@
   }
   #container .login_inner .login_02 .login_social_naver p {
     font-size: 1.4rem;
+  }
+  footer {
+    position: absolute;
+    bottom: 0;
   }
 }
