--- a/login/styles/res_sign.scss
+++ b/login/styles/res_sign.scss
@@ -1,132 +1,123 @@
 // variables
 @import "../../styles/variables.scss";
 
-@mixin res-type-01 {
-  width: 300px;
-  & > :nth-child(1) {
-    h2 {
-      font-size: 1.4rem;
-      b {
-        font-size: 1.4rem;
-      }
-    }
-    p {
-      font-size: 1.2rem;
-    }
-  }
-  & > :nth-child(2) {
-    width: 300px;
-    input {
-      height: 40px;
-      padding: 5px 10px;
-      font-size: 1.2rem;
-    }
-  }
-}
-
-@mixin res-type-02 {
-  width: 300px;
-  & > :nth-child(1) {
-    h2 {
-      font-size: 1.4rem;
-      b {
-        font-size: 1.4rem;
-      }
-    }
-    p {
-      font-size: 1.2rem;
-    }
-  }
-  & > :nth-child(2) {
-    width: 300px;
-    input {
-      height: 40px;
-      padding: 5px 40px 5px 10px;
-      font-size: 1.2rem;
-    }
-    i {
-      right: 10px;
-      font-size: 1.2rem;
-    }
-  }
-}
-
-@mixin res-type-03 {
-  width: 90px;
-  height: 40px;
-  padding: 5px 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid map-get($map: $color, $key: gray-999);
-  border-radius: 10px;
-  background: url(../login_imgs/arrow.png) no-repeat right 10px center / 0.8rem;
-  font-family: map-get($map: $font, $key: pretendard);
-  font-size: 1.2rem;
-  -webkit-appearance: none;
-  appearance: none;
-}
-
 @media screen and (max-width: 500px) {
-  body {
-    width: 100%;
-    height: 100vh;
-    gap: 50px;
+  @mixin type-01 {
+    & > :nth-child(1) {
+      h2 {
+        font-size: 1.4rem;
+        b {
+          font-size: 1.4rem;
+        }
+      }
+      p {
+        font-size: 1rem;
+      }
+    }
+    & > :nth-child(2) {
+      input {
+        padding: 5px 10px;
+        height: 40px;
+        font-size: 1.2rem;
+      }
+    }
   }
+
+  @mixin type-02 {
+    & > :nth-child(1) {
+      h2 {
+        font-size: 1.4rem;
+        b {
+          font-size: 1.4rem;
+          font-weight: bold;
+          color: map-get($map: $color, $key: red);
+        }
+      }
+      p {
+        font-size: 1rem;
+      }
+    }
+    & > :nth-child(2) {
+      input {
+        height: 40px;
+        padding: 5px 40px 5px 10px;
+        font-size: 1.2rem;
+      }
+      i {
+        font-size: 1.2rem;
+        background: #fff;
+        position: absolute;
+        right: 10px;
+      }
+    }
+  }
+
+  @mixin type-03 {
+    width: 30%;
+    height: 40px;
+    padding: 5px 15px;
+    background: url(/login/login_imgs/arrow.png) no-repeat right 15px center /
+      1rem;
+    font-size: 1.2rem;
+  }
+
   #container {
     width: 100%;
-    height: 100%;
+    gap: 100px;
     .sign_inner {
-      width: 500px;
-      .sign {
-        width: 300px;
+      width: 100%;
+      gap: 20px;
+      .sign_form {
+        width: 100%;
+        max-width: 300px;
         gap: 20px;
         .sign_title {
           gap: 20px;
           h2 {
-            width: 300px;
+            width: 100%;
             font-size: 2.4rem;
           }
           p {
-            font-size: 1rem;
+            font-size: 1.2rem;
           }
         }
         .sign_id {
-          @include res-type-01;
+          @include type-01;
         }
         .sign_pw {
-          @include res-type-02;
+          @include type-02;
         }
         .sign_pw_again {
-          @include res-type-02;
+          @include type-02;
         }
         .sign_name {
-          @include res-type-01;
+          @include type-01;
         }
         .sign_date {
-          width: 300px;
+          width: 100%;
+          gap: 10px;
           .sign_date_text {
             h2 {
               font-size: 1.4rem;
             }
           }
           .date_select {
-            width: 300px;
-            height: 40px;
+            width: 100%;
             .date_select_year {
-              @include res-type-03;
+              @include type-03;
             }
             .date_select_month {
-              @include res-type-03;
+              @include type-03;
             }
             .date_select_day {
-              @include res-type-03;
+              @include type-03;
             }
           }
         }
         .sign_email {
-          width: 300px;
-          :nth-child(1) {
+          width: 100%;
+          gap: 10px;
+          & > :nth-child(1) {
             h2 {
               font-size: 1.4rem;
               b {
@@ -134,58 +125,84 @@
               }
             }
             p {
-              font-size: 1.2rem;
+              font-size: 1rem;
             }
           }
           .email_input {
             input {
-              width: 150px;
               height: 40px;
               padding: 5px 10px;
               font-size: 1.2rem;
             }
             p {
-              font-size: 1.2rem;
+              font-size: 1.6rem;
             }
             select {
-              width: 90px;
+              width: 30%;
               height: 40px;
-              padding: 5px 10px;
-              font-size: 1.2rem;
-              line-height: 1.2rem;
-              background: url(../login_imgs/arrow.png) no-repeat right 10px
+              padding: 0 10px;
+              background: url(/login/login_imgs/arrow.png) no-repeat right 10px
                 center / 0.8rem;
+              font-size: 1.2rem;
             }
           }
         }
         .sign_call {
-          @include res-type-01;
+          width: 100%;
+          gap: 10px;
+          & > :nth-child(1) {
+            h2 {
+              font-size: 1.4rem;
+              b {
+                font-size: 1.4rem;
+              }
+            }
+            p {
+              font-size: 1rem;
+            }
+          }
+          .call_input {
+            input {
+              width: 30%;
+              height: 40px;
+              padding: 5px 10px;
+              font-size: 1.2rem;
+            }
+          }
         }
         .sign_address {
-          @include res-type-01;
+          @include type-01;
         }
       }
       .sign_checkbox {
-        width: 300px;
+        width: 100%;
+        gap: 10px;
         div {
-          gap: 5px;
-          .checkbox {
+          width: 100%;
+          gap: 10px;
+          .check_boxes {
             width: 16px;
             height: 16px;
           }
-          .checkbox:checked::after {
+          .check_boxes:checked::after {
             font-size: 1.4rem;
           }
-          p {
-            font-size: 1.4rem;
-            b {
-              font-size: 1.4rem;
+          ul {
+            width: 100%;
+            li {
+              font-size: 1.2rem;
+              b {
+                font-size: 1.2rem;
+              }
+              &.sign_error_message {
+                font-size: 1rem;
+              }
             }
           }
         }
       }
-      button {
-        width: 300px;
+      .sign_button {
+        width: 100%;
         height: 40px;
         font-size: 1.4rem;
       }
