--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -7,7 +7,7 @@
 // footer
 footer {
   width: 100%;
-  height: 190px;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,7 +15,9 @@ footer {
   color: map-get($map: $color, $key: gray-999);
   position: relative;
   .footer_inner {
-    width: 1050px;
+    width: 100%;
+    max-width: 1050px;
+    margin: 50px auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -50,8 +52,8 @@ footer {
       align-items: start;
       gap: 10px;
       img {
-        width: 140px;
-        height: 66px;
+        width: 160px;
+        height: 70px;
       }
       p {
         font-family: map-get($map: $font, $key: pretendard);
@@ -64,12 +66,12 @@ footer {
       ul {
         display: flex;
         flex-direction: column;
-        gap: 9px;
+        gap: 10px;
         li {
           font-family: map-get($map: $font, $key: pretendard);
           font-size: 1.4rem;
           &:last-child {
-            font-size: 1.8rem;
+            font-size: 1.6rem;
             font-weight: bold;
           }
         }
@@ -78,7 +80,7 @@ footer {
     .footer_inner_right {
       display: flex;
       flex-direction: column;
-      gap: 8px;
+      gap: 10px;
       font-family: map-get($map: $font, $key: pretendard);
       .inner_right_top {
         display: flex;
@@ -90,7 +92,7 @@ footer {
               font-weight: bold;
             }
             &:nth-child(2) {
-              font-size: 2.6rem;
+              font-size: 2.4rem;
               font-weight: bold;
             }
           }
@@ -102,6 +104,7 @@ footer {
         .right_bottom_left {
           display: flex;
           flex-direction: column;
+          text-align: center;
           gap: 5px;
           li {
             &:nth-child(1) {
@@ -115,7 +118,7 @@ footer {
         }
         .right_bottom_right {
           font-size: 1.4rem;
-          line-height: 150%;
+          line-height: 140%;
         }
       }
     }
